# GB28181

./: .gitignore  CMakeLists.txt  README.md
data/: hik_catalog.txt
libs/linux/: libeXosip2.la  libeXosip2.so.12.0.0  libosip2.la  libosip2.so.12.0.0  libosipparser2.la  libosipparser2.so.12.0.0
src/: gb28181.c  public.h  sipserver.c
